fix css on mobile

--- a/src/assets/scss/pages/_character-page.scss
+++ b/src/assets/scss/pages/_character-page.scss
@@ -15,6 +15,10 @@
 		.character-details {
 			gap: em(10px);
 
+			> div {
+				flex-wrap: wrap;
+			}
+
 			h2 {
 				font-size: em(40px);
 				margin-bottom: auto;
